2007-02-01  Akim Demaille  <akim.demaille@free.fr>

	Get rid of casts
	* src/ucommand.hh, src/ucommand.cc (UCommand_BINDER): Use UBindType,
	instead of a stupid int.
	Remove many casts.
	Convert others to C++ style.
	* src/parser/bison/ugrammar.y: Adjust.

2007-02-01  Akim Demaille  <akim.demaille@free.fr>

	Remove some casts using tmp vars
	* src/ucommand.cc: here.
	* src/uobject/: Update.

2007-02-01  Akim Demaille  <akim.demaille@free.fr>

	C++ casts, enums
	* uqueue.hh: here, as usual.
	The declaration of enums could be done by style.

2007-02-01  Akim Demaille  <akim.demaille@free.fr>

	C++ Casts
	* utypes.hh: here.

2007-02-01  Akim Demaille  <akim.demaille@free.fr>

	C cast
	* src/ughostconnection.cc: Make it C++.

2007-02-01  Akim Demaille  <akim.demaille@free.fr>

	Remove C casts
	* src/memorymanager/memorymanager.cc: here.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Add missing include
	* src/uvariable.cc: here.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	Use passert, not assert
	* src/uvariable.cc: here.

2007-01-30  Akim Demaille  <demaille@gostai.com>

	svn merge -r 737:799 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	revert email that fails in mailto property.

	2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	change mailto.

	2007-01-27  Jean-Christophe Baillie  <baillie@gostai.com>

	fix BIN problem in grammar.y
	* src/parser/bison/ugrammar.y: replace "BIN" by TOK_BIN.

	2007-01-27  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Catch up with recent stuff in common.
	* src/console.cc: utime is now in the libport namespace.
	* src/parser/bison/utoken.l: Handle conflicting CPP defines.
	* src/uexpression.cc (ECHO, PING): Now provided by libport.

	2007-01-26  POTHIER Benoit  <pothier@gostai.com>

	Dummy change to test buildfarm.
	* AUTHORS: Change Copyright date.

	2007-01-25  Matthieu Nottale  <nottale@gostai.com>

	Remove unjustified abort, replace abort by assert