@@ -1,3 +1,10 @@
+2007-02-01  Akim Demaille  <akim@lrde.epita.fr>
+
+	tag-info.*.
+	* src/tag-info.hh, src/tag-info.cc: New.
+	Built by taking pieces from...
+	* src/utypes.hh, src/ucommand.cc, src/userver.hh: these files.
+
 2007-02-01  Akim Demaille  <akim.demaille@free.fr>
 
 	Get rid of casts
